feat(ops): check the Tomcat generation and upgrade into a new Tomcat with --tomcat-dir
JasperReports Server 10 runs only on Tomcat 10.1.24+ or 11.0.11+, and every
9-to-10 procedure in the vendor guides starts by copying the webapp into a
new Tomcat before js-upgrade-*. jrsctl reused the current Tomcat and had no
check, so a 9-to-10 upgrade would have deployed into Tomcat 9 and produced
a server that cannot start.

A Tomcat version reader (lib/catalina.jar manifest, else RELEASE-NOTES)
feeds a doctor item for the running server and a verify-target-package
refusal when the host Tomcat is not certified for the target; an unreadable
version is a plan warning. upgrade --tomcat-dir copies the webapp into the
new Tomcat after the stop (compensated by removing the copy), names it as
appServerDir, clears its caches and points server.tomcatDir at it at the
end. The option is accepted only with service.kind manual, since a
registered service would start the old Tomcat (ADR-0026). Review 2.1.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01D6aBq3Yz5xZBCbemq8jnmv